--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "element-plus": "^2.4.4",
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.6.2",
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "chart.js": "^4.4.0",
+    "vue-chartjs": "^5.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
